force-app/main/default/objects/OLA_Ride__c/OLA_Ride__c.object-meta.xml
<CustomObject>
    <label>OLA Ride</label>
    <nameField>
        <displayFormat>OLA-{0000}</displayFormat>
        <label>OLA Ride Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OLA Rides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>