force-app/main/default/objects/OLA_Ride__c/fields/Additional_Comment1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment1__c</fullName>
    <formula>OLA_Billing__r.Additional_Comment__c</formula>
    <label>Additional Comment</label>
    <type>Text</type>
</CustomField>