force-app/main/default/objects/OLA_Ride__c/fields/Base_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Base_Cost1__c</fullName>
    <formula>OLA_Billing__r.Base_Cost__c</formula>
    <label>Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>