force-app/main/default/objects/OLA_Ride__c/fields/Billed_Trip_Duration1__c.field-meta.xml
<CustomField>
    <fullName>Billed_Trip_Duration1__c</fullName>
    <formula>OLA_Billing__r.Billed_Trip_Duration__c</formula>
    <label>Billed Trip Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>