force-app/main/default/objects/OLA_Ride__c/fields/Billing_Date1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date1__c</fullName>
    <formula>OLA_Billing__r.Billing_Date__c</formula>
    <label>Billing Date</label>
    <type>DateTime</type>
</CustomField>