force-app/main/default/objects/OLA_Ride__c/fields/Booking_Created_By1__c.field-meta.xml
<CustomField>
    <fullName>Booking_Created_By1__c</fullName>
    <formula>OLA_Billing__r.Booking_Created_By__c</formula>
    <label>Booking Created By</label>
    <type>Text</type>
</CustomField>