force-app/main/default/objects/OLA_Ride__c/fields/Budget_Override_Policy1__c.field-meta.xml
<CustomField>
    <fullName>Budget_Override_Policy1__c</fullName>
    <formula>OLA_Billing__r.Budget_Override_Policy__c</formula>
    <label>Budget Override Policy</label>
    <type>Text</type>
</CustomField>