force-app/main/default/objects/OLA_Ride__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <formula>OLA_Billing__r.Category__c</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>