force-app/main/default/objects/OLA_Ride__c/fields/Channel_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_ID__c</fullName>
    <formula>Channel_Partner_Name__r.Id</formula>
    <label>Channel Partner ID</label>
    <type>Text</type>
</CustomField>