force-app/main/default/objects/OLA_Ride__c/fields/Channel_Partner_Name1__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name1__c</fullName>
    <formula>Channel_Partner_Name__r.Name</formula>
    <label>Channel Partner Name</label>
    <type>Text</type>
</CustomField>