force-app/main/default/objects/OLA_Ride__c/fields/Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Name</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>OLA Rides</relationshipLabel>
    <relationshipName>OLA_Rides</relationshipName>
    <type>Lookup</type>
</CustomField>