force-app/main/default/objects/OLA_Ride__c/fields/Channel_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Status__c</fullName>
    <label>Channel Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Un-Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>