force-app/main/default/objects/OLA_Ride__c/fields/Charged_Time1__c.field-meta.xml
<CustomField>
    <fullName>Charged_Time1__c</fullName>
    <formula>OLA_Billing__r.Charged_Time__c</formula>
    <label>Charged Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>