force-app/main/default/objects/OLA_Ride__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIF</label>
    <referenceTo>CIF__c</referenceTo>
    <relationshipLabel>OLA Rides</relationshipLabel>
    <relationshipName>OLA_Rides</relationshipName>
    <type>Lookup</type>
</CustomField>