force-app/main/default/objects/OLA_Ride__c/fields/CIF_form_number__c.field-meta.xml
<CustomField>
    <fullName>CIF_form_number__c</fullName>
    <formula>Opportunity_Name__r.RW_CIF_form_number__c</formula>
    <label>CIF No</label>
    <type>Text</type>
</CustomField>