force-app/main/default/objects/OLA_Ride__c/fields/Comment1__c.field-meta.xml
<CustomField>
    <fullName>Comment1__c</fullName>
    <formula>OLA_Billing__r.Comment__c</formula>
    <label>Comment</label>
    <type>Text</type>
</CustomField>