force-app/main/default/objects/OLA_Ride__c/fields/Commision_GST1__c.field-meta.xml
<CustomField>
    <fullName>Commision_GST1__c</fullName>
    <formula>OLA_Billing__r.Commision_GST__c</formula>
    <label>Commision GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>