force-app/main/default/objects/OLA_Ride__c/fields/Commission_Base_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Commission_Base_Cost1__c</fullName>
    <formula>OLA_Billing__r.Commission_Base_Cost__c</formula>
    <label>Commission Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>