force-app/main/default/objects/OLA_Ride__c/fields/CP_Rera_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Rera_Name__c</fullName>
    <formula>Channel_Partner_Name__r.Company_Name_As_per_RERA__c</formula>
    <label>CP Rera Name</label>
    <type>Text</type>
</CustomField>