force-app/main/default/objects/OLA_Ride__c/fields/Custom_Field_11__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_11__c</fullName>
    <formula>OLA_Billing__r.Custom_Field_1__c</formula>
    <label>Custom Field 1</label>
    <type>Text</type>
</CustomField>