force-app/main/default/objects/OLA_Ride__c/fields/Custom_Field_33__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_33__c</fullName>
    <formula>OLA_Billing__r.Custom_Field_3__c</formula>
    <label>Custom Field 3</label>
    <type>Text</type>
</CustomField>