force-app/main/default/objects/OLA_Ride__c/fields/Date_Time1__c.field-meta.xml
<CustomField>
    <fullName>Date_Time1__c</fullName>
    <formula>OLA_Billing__r.Date_Time__c</formula>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>