force-app/main/default/objects/OLA_Ride__c/fields/Driver_Base_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Driver_Base_Cost1__c</fullName>
    <formula>OLA_Billing__r.Driver_Base_Cost__c</formula>
    <label>Driver Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>