force-app/main/default/objects/OLA_Ride__c/fields/Drop_Loaction__c.field-meta.xml
<CustomField>
    <fullName>Drop_Loaction__c</fullName>
    <label>Drop Loaction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>