force-app/main/default/objects/OLA_Ride__c/fields/Drop_Location1__c.field-meta.xml
<CustomField>
    <fullName>Drop_Location1__c</fullName>
    <formula>OLA_Billing__r.Drop_Location__c</formula>
    <label>Drop Location</label>
    <type>Text</type>
</CustomField>