force-app/main/default/objects/OLA_Ride__c/fields/Drop_Time__c.field-meta.xml
<CustomField>
    <fullName>Drop_Time__c</fullName>
    <label>Drop Time</label>
    <type>Time</type>
</CustomField>