force-app/main/default/objects/OLA_Ride__c/fields/Employee_Band1__c.field-meta.xml
<CustomField>
    <fullName>Employee_Band1__c</fullName>
    <formula>OLA_Billing__r.Employee_Band__c</formula>
    <label>Employee Band</label>
    <type>Text</type>
</CustomField>