force-app/main/default/objects/OLA_Ride__c/fields/Employee_Base_Location1__c.field-meta.xml
<CustomField>
    <fullName>Employee_Base_Location1__c</fullName>
    <formula>OLA_Billing__r.Employee_Base_Location__c</formula>
    <label>Employee Base Location</label>
    <type>Text</type>
</CustomField>