force-app/main/default/objects/OLA_Ride__c/fields/Employee_Code1__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code1__c</fullName>
    <formula>OLA_Billing__r.Employee_Code__c</formula>
    <label>Employee Code</label>
    <type>Text</type>
</CustomField>