force-app/main/default/objects/OLA_Ride__c/fields/Employee_Cost_Center1__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cost_Center1__c</fullName>
    <formula>OLA_Billing__r.Employee_Cost_Center__c</formula>
    <label>Employee Cost Center</label>
    <type>Text</type>
</CustomField>