force-app/main/default/objects/OLA_Ride__c/fields/Employee_Designation1__c.field-meta.xml
<CustomField>
    <fullName>Employee_Designation1__c</fullName>
    <formula>OLA_Billing__r.Employee_Designation__c</formula>
    <label>Employee Designation</label>
    <type>Text</type>
</CustomField>