force-app/main/default/objects/OLA_Ride__c/fields/Employee_Gender1__c.field-meta.xml
<CustomField>
    <fullName>Employee_Gender1__c</fullName>
    <formula>Text(OLA_Billing__r.Employee_Gender__c)</formula>
    <label>Employee Gender</label>
    <type>Text</type>
</CustomField>