force-app/main/default/objects/OLA_Ride__c/fields/Expense_Code1__c.field-meta.xml
<CustomField>
    <fullName>Expense_Code1__c</fullName>
    <formula>OLA_Billing__r.Expense_Code__c</formula>
    <label>Expense Code</label>
    <type>Text</type>
</CustomField>