force-app/main/default/objects/OLA_Ride__c/fields/Extra_KM_Charge_Case1__c.field-meta.xml
<CustomField>
    <fullName>Extra_KM_Charge_Case1__c</fullName>
    <formula>OLA_Billing__r.Extra_KM_Charge_Case__c</formula>
    <label>Extra KM/Charge Case</label>
    <type>Text</type>
</CustomField>