force-app/main/default/objects/OLA_Ride__c/fields/GD_Number1__c.field-meta.xml
<CustomField>
    <fullName>GD_Number1__c</fullName>
    <formula>OLA_Billing__r.GD_Number__c</formula>
    <label>GD Number</label>
    <type>Text</type>
</CustomField>