force-app/main/default/objects/OLA_Ride__c/fields/Group1__c.field-meta.xml
<CustomField>
    <fullName>Group1__c</fullName>
    <formula>OLA_Billing__r.Group__c</formula>
    <label>Group</label>
    <type>Text</type>
</CustomField>