force-app/main/default/objects/OLA_Ride__c/fields/Group2__c.field-meta.xml
<CustomField>
    <fullName>Group2__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales - CP</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Sales - Referral &amp; Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>