force-app/main/default/objects/OLA_Ride__c/fields/Guest_Name1__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name1__c</fullName>
    <formula>OLA_Billing__r.Guest_Name__c</formula>
    <label>Guest Name</label>
    <type>Text</type>
</CustomField>