force-app/main/default/objects/OLA_Ride__c/fields/Guest_Phone_Number1__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone_Number1__c</fullName>
    <formula>OLA_Billing__r.Guest_Phone_Number__c</formula>
    <label>Guest Phone Number</label>
    <type>Text</type>
</CustomField>