force-app/main/default/objects/OLA_Ride__c/fields/Manager_Email_Address1__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Address1__c</fullName>
    <formula>OLA_Billing__r.Manager_Email_Address__c</formula>
    <label>Manager Email Address</label>
    <type>Text</type>
</CustomField>