force-app/main/default/objects/OLA_Ride__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>OLA_Billing__r.Manager_Name__c</formula>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>