force-app/main/default/objects/OLA_Ride__c/fields/OLA_Ride_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>OLA_Ride_Book_Date__c</fullName>
    <label>OLA Ride Book Date</label>
    <type>Date</type>
</CustomField>