force-app/main/default/objects/OLA_Ride__c/fields/OLA_Ride_For__c.field-meta.xml
<CustomField>
    <fullName>OLA_Ride_For__c</fullName>
    <label>OLA Ride For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>CP Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>