force-app/main/default/objects/OLA_Ride__c/fields/Operator_State1__c.field-meta.xml
<CustomField>
    <fullName>Operator_State1__c</fullName>
    <formula>OLA_Billing__r.Operator_State__c</formula>
    <label>Operator State</label>
    <type>Text</type>
</CustomField>