force-app/main/default/objects/OLA_Ride__c/fields/Override_Policy1__c.field-meta.xml
<CustomField>
    <fullName>Override_Policy1__c</fullName>
    <formula>OLA_Billing__r.Override_Policy__c</formula>
    <label>Override Policy</label>
    <type>Text</type>
</CustomField>