force-app/main/default/objects/OLA_Ride__c/fields/Override_Reason1__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason1__c</fullName>
    <formula>OLA_Billing__r.Override_Reason__c</formula>
    <label>Override Reason</label>
    <type>Text</type>
</CustomField>