force-app/main/default/objects/OLA_Ride__c/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <formula>Channel_Partner_Name__r.Broker_Pan_No__c</formula>
    <label>PAN No</label>
    <type>Text</type>
</CustomField>