force-app/main/default/objects/OLA_Ride__c/fields/Payment_Mode1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode1__c</fullName>
    <formula>OLA_Billing__r.Payment_Mode__c</formula>
    <label>Payment Mode</label>
    <type>Text</type>
</CustomField>