force-app/main/default/objects/OLA_Ride__c/fields/Pick_Location1__c.field-meta.xml
<CustomField>
    <fullName>Pick_Location1__c</fullName>
    <formula>OLA_Billing__r.Pick_Location__c</formula>
    <label>Pick Location</label>
    <type>Text</type>
</CustomField>