force-app/main/default/objects/OLA_Ride__c/fields/Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time__c</fullName>
    <label>Pickup Time</label>
    <type>Time</type>
</CustomField>