force-app/main/default/objects/OLA_Ride__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>OLA Rides</relationshipLabel>
    <relationshipName>OLA_Rides</relationshipName>
    <type>Lookup</type>
</CustomField>