force-app/main/default/objects/OLA_Ride__c/fields/Project_Name_Customer__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Customer__c</fullName>
    <formula>Opportunity_Name__r.Project_Name_formula__c</formula>
    <label>Project Name - Customer</label>
    <type>Text</type>
</CustomField>