force-app/main/default/objects/OLA_Ride__c/fields/Reason1__c.field-meta.xml
<CustomField>
    <fullName>Reason1__c</fullName>
    <formula>OLA_Billing__r.Reason__c</formula>
    <label>Reason</label>
    <type>Text</type>
</CustomField>