force-app/main/default/objects/OLA_Ride__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>30</length>
    <type>Text</type>
</CustomField>