force-app/main/default/objects/OLA_Ride__c/fields/Request_Raised_by__c.field-meta.xml
<CustomField>
    <fullName>Request_Raised_by__c</fullName>
    <label>Request Raised by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bhuvnesh Rajput</fullName>
            </value>
            <value>
                <fullName>Chetan Sonavane</fullName>
            </value>
            <value>
                <fullName>Permanand Yadav</fullName>
            </value>
            <value>
                <fullName>Suraj Chawda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>