force-app/main/default/objects/OLA_Ride__c/fields/Ride_Booking_ID2__c.field-meta.xml
<CustomField>
    <fullName>Ride_Booking_ID2__c</fullName>
    <formula>OLA_Billing__r.Ola_Ride_Book_Id__c</formula>
    <label>Ride Booking ID Actual</label>
    <type>Text</type>
</CustomField>