force-app/main/default/objects/OLA_Ride__c/fields/Ride_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ride_Total_Cost__c</fullName>
    <label>Ride Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>