force-app/main/default/objects/OLA_Ride__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <formula>Channel_Partner_Name__r.SAP_CP_Code__c</formula>
    <label>SAP Code</label>
    <type>Text</type>
</CustomField>