force-app/main/default/objects/OLA_Ride__c/fields/SB_Tax1__c.field-meta.xml
<CustomField>
    <fullName>SB_Tax1__c</fullName>
    <formula>OLA_Billing__r.SB_Tax__c</formula>
    <label>SB Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>