force-app/main/default/objects/OLA_Ride__c/fields/Service_City1__c.field-meta.xml
<CustomField>
    <fullName>Service_City1__c</fullName>
    <formula>OLA_Billing__r.Service_City__c</formula>
    <label>Service City</label>
    <type>Text</type>
</CustomField>