force-app/main/default/objects/OLA_Ride__c/fields/Service_Tax1__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax1__c</fullName>
    <formula>OLA_Billing__r.Service_Tax__c</formula>
    <label>Service Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>