force-app/main/default/objects/OLA_Ride__c/fields/Total_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost1__c</fullName>
    <formula>OLA_Billing__r.Total_Cost__c</formula>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>