force-app/main/default/objects/OLA_Ride__c/fields/Total_Tax1__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax1__c</fullName>
    <formula>OLA_Billing__r.Total_Tax__c</formula>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>