force-app/main/default/objects/OLA_Ride__c/fields/Un_Registered_Channel_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Un_Registered_Channel_Partner_Name__c</fullName>
    <label>Un-Registered Channel Partner Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>