force-app/main/default/objects/OLA_Ride__c/fields/User_Email_Id1__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Id1__c</fullName>
    <formula>OLA_Billing__r.User_Email_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Email Id</label>
    <type>Text</type>
</CustomField>