force-app/main/default/objects/OLA_Ride__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OLA_Ride_For__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Re-Visit</fullName>
            </value>
            <value>
                <fullName>CP Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>