force-app/main/default/objects/OLA_Ride__c/fields/walkin_Source__c.field-meta.xml
<CustomField>
    <fullName>walkin_Source__c</fullName>
    <formula>Text(Opportunity_Name__r.Walkin_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walkin Source</label>
    <type>Text</type>
</CustomField>