force-app/main/default/objects/OLA_Ride__c/fields/Waypoints_Location1__c.field-meta.xml
<CustomField>
    <fullName>Waypoints_Location1__c</fullName>
    <formula>OLA_Billing__r.Waypoints_Location__c</formula>
    <label>Waypoints Location</label>
    <type>Text</type>
</CustomField>