force-app/main/default/objects/OLA_Ride__c/validationRules/Channel_Partner_Status_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Partner_Status_is_Required</fullName>
    <active>true</active>
    <description>Channel Partner Status  is required if OLA Ride for - CP Meeting is selected.</description>
    <errorConditionFormula>AND(
TEXT(OLA_Ride_For__c) = &quot;CP Meeting&quot;,
ISBLANK(TEXT(Channel_Partner_Status__c)))</errorConditionFormula>
    <errorDisplayField>Channel_Partner_Status__c</errorDisplayField>
    <errorMessage>Please select the Channel Partner Status.</errorMessage>
</ValidationRule>