force-app/main/default/objects/OLA_Ride__c/validationRules/CIF_is_required_for_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>CIF_is_required_for_Customer</fullName>
    <active>true</active>
    <description>CIF is required if OLA Ride for - Customer is selected</description>
    <errorConditionFormula>AND(
TEXT(OLA_Ride_For__c) = &quot;Customer&quot;,
OR(ISBLANK(CIF__c)))</errorConditionFormula>
    <errorDisplayField>CIF__c</errorDisplayField>
    <errorMessage>Please Select CIF.</errorMessage>
</ValidationRule>