force-app/main/default/objects/OLA_Ride__c/validationRules/CP_is_required_for_Registered_CP.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_is_required_for_Registered_CP</fullName>
    <active>true</active>
    <description>Channel Partner Name is required if  Channel Partner Status is Registered</description>
    <errorConditionFormula>AND(
TEXT(Channel_Partner_Status__c	) = &quot;Registered&quot;,
ISBLANK(Channel_Partner_Name__c))</errorConditionFormula>
    <errorDisplayField>Channel_Partner_Name__c</errorDisplayField>
    <errorMessage>Please select the Channel Partner Name.</errorMessage>
</ValidationRule>