force-app/main/default/objects/OLA_Ride__c/validationRules/CP_is_required_for_UnRegistered_CP.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_is_required_for_UnRegistered_CP</fullName>
    <active>true</active>
    <description>Un-Registered Channel Partner Name is required if  Channel Partner Status is Un-Registered</description>
    <errorConditionFormula>AND(
TEXT(Channel_Partner_Status__c	) = &quot;Un-Registered&quot;,
ISBLANK(Un_Registered_Channel_Partner_Name__c))</errorConditionFormula>
    <errorDisplayField>Un_Registered_Channel_Partner_Name__c</errorDisplayField>
    <errorMessage>Please Enter the Un-Registered Channel Partner Name.</errorMessage>
</ValidationRule>