force-app/main/default/objects/OLA_Ride__c/validationRules/Opportunity_is_required_for_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_is_required_for_Customer</fullName>
    <active>true</active>
    <description>Opportunity is required if OLA Ride for - Customer is selected</description>
    <errorConditionFormula>AND(
TEXT(OLA_Ride_For__c) = &quot;Customer&quot;,
OR(ISBLANK(Opportunity_Name__c)))</errorConditionFormula>
    <errorDisplayField>Opportunity_Name__c</errorDisplayField>
    <errorMessage>Please Select Opportunity Name.</errorMessage>
</ValidationRule>